--- a/readme.me
+++ b/readme.me
@@ -5,3 +5,7 @@ Order Service (NestJS, separate server) - Manages orders, payments, and shipping
 Product Service (NestJS, separate server) - Handles products, categories, and inventory.
 Database (PostgreSQL/MySQL) - A single database can be shared across microservices or separate DBs per service.
 Message Broker (RabbitMQ/Kafka/NATS) - Enables communication between services.
+
+
+nest g resource products    --> this will generate all related files including test files
+
